fix: Update URL handling in CachedImageComp to use URI.create for better compatibility